--- a/css/main.css
+++ b/css/main.css
@@ -30,16 +30,13 @@ body{
     height:100vh;
     border: 2px solid blue;
 }
-.main .codeWrapper{
+.main .codeWrapper,.main .paperWrapper{
     height: 100%;
     width: 50%;
 }
-.code{
+.code,.paper{
     overflow: auto;
 }
-
-.main .paperWrapper{
-    height: 100%;
-    width: 50%;
+#paperText{
+    font-family: -apple-system,Helvetica Neue,Helvetica,Nimbus Sans L,Arial,Liberation Sans,PingFang SC,Hiragino Sans GB,Source Han Sans CN,Source Han Sans SC,Microsoft YaHei,Wenquanyi Micro Hei,WenQuanYi Zen Hei,ST Heiti,SimHei,WenQuanYi Zen Hei Sharp,sans-serif;
 }
-
